--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -104,18 +104,31 @@
 </nav>
 
 <!-- HERO CAROUSEL -->
-<div id="cafeCarousel" class="carousel slide" data-bs-ride="carousel">
+<div id="cafeCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="4500" data-bs-pause="hover">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#cafeCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#cafeCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#cafeCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="{% static 'images/redvelvet.jpg' %}" class="d-block w-100">
+            <img src="{% static 'images/redvelvet.jpg' %}" class="d-block w-100" loading="eager" alt="Red Velvet">
         </div>
         <div class="carousel-item">
-            <img src="{% static 'images/cofee.jpg' %}" class="d-block w-100">
+            <img src="{% static 'images/cofee.jpg' %}" class="d-block w-100" loading="lazy" alt="Coffee">
         </div>
         <div class="carousel-item">
-            <img src="{% static 'images/burger.jpg' %}" class="d-block w-100">
+            <img src="{% static 'images/burger.jpg' %}" class="d-block w-100" loading="lazy" alt="Burger">
         </div>
     </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#cafeCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#cafeCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
 </div>
 
 <!-- TITLE -->
