--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -121,7 +121,7 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="{% static 'images/redvelvet.jpg' %}" class="d-block w-100" loading="eager" alt="Red Velvet">
+            <img src="{% static 'images/redvelvet.jpg' %}" class="d-block w-100" loading="eager" >
         </div>
         <div class="carousel-item">
             <img src="{% static 'images/cofee.jpg' %}" class="d-block w-100" loading="lazy" alt="Coffee">
